<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app_material">Make your App Material</string>
    <string name="go_obiquitous">Go Obiquitous</string>
    <string name="capstone_my_own_app">Capstone: My Own App</string>

    <string name="msg_popular_movies">This button will launch my Popular Movies App</string>
    <string name="msg_stock_hawk">This button will launch my Stock Hawk App</string>
    <string name="msg_build_it_bigger">This button will launch my Build It Bigger App</string>
    <string name="msg_make_material">This button will launch my Make Your App Material</string>
    <string name="msg_go_obiquitous">This button will launch my Go Obiquitous App</string>
    <string name="msg_capstone">This button will launch my Capstone App</string>
</resources>
